<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_pencil"
        android:title="@string/menu_pencil"
        android:showAsAction="always"
        android:orderInCategory="100" 
        android:icon="@drawable/menu_pencil"/>
    <item android:id="@+id/menu_undo"
        android:showAsAction="always"
        android:title="@string/menu_undo"
        android:orderInCategory="200"
        android:icon="@drawable/menu_undo"/>
    <item android:id="@+id/menu_clear"
        android:title="@string/menu_clear"
        android:showAsAction="always"
        android:orderInCategory="300"
        android:icon="@drawable/menu_clear"/>
    <item android:id="@+id/menu_save"
        android:showAsAction="always"
        android:title="@string/menu_save"
        android:orderInCategory="400"
        android:icon="@drawable/menu_save"/>
</menu>
