<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/old_paper_texture"
    >

    <LinearLayout 
        android:orientation="vertical"
        android:layout_margin="@dimen/main_screen_margin"
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:gravity="center"
        >
        <ImageView
        	android:layout_width="@dimen/logo_size"    
        	android:layout_height="@dimen/logo_size"
        	android:src="@drawable/logo"    
            />
        <Button
            android:id="@+id/btnCamera"
            style="@style/ButtonStyle"
            android:onClick="onButtonClick"
            android:text="@string/btn_camera"
            />
        <Button
            android:id="@+id/btnGallery"
            style="@style/ButtonStyle"
            android:onClick="onButtonClick"
            android:text="@string/btn_gallery"            
            />
        <Button
            android:id="@+id/btnBlank"
            style="@style/ButtonStyle"
            android:onClick="onButtonClick"
            android:text="@string/btn_blank"            
            />

        
    </LinearLayout>

</RelativeLayout>
